--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -8,8 +8,36 @@
 <body>
 <h1>My Super Fancy Spa</h1>
 <div id = "clientProfile">
+    <h2>My profile</h2>
+    <p th:text = "${name}"> Name </p>
+    <p th:text = "${skintype}"> SkinType </p>
+    <p th:text = "${manipedi}"> Manipedi</p>
 </div>
 <div id = "servicesMenu">
+    <h2>Menu of Available Services</h2>
+    <div>
+        <h3>Facial Treatments</h3>
+        <p>The below facial treatment are recommended by our estheticians for your given skin type.</p>
+        <table>
+            <th:block th:each ="facial: ${appropriateFacials}">
+                <tr>
+                    <td th:text ="${facial}"></td>
+                </tr>
+            </th:block>
+        </table>
+    </div>
+    <div th:if = "${manipedi == 'manicure'}">
+        <h3>Manicure</h3>
+        <table th:replace = "fragments :: manicureDescription"></table>
+    </div>
+    <div th:if = "${manipedi == 'pedicure'}">
+        <h3>Pedicure</h3>
+        <table th:replace = "fragments :: pedicureDescription"></table>
+    </div>
+<!--    <div th:if = "${manipedi == 'pedicure' && manipedi == 'pedicure'}">-->
+<!--        <h3>Both</h3>-->
+<!--        <table th:replace = "fragments :: pedicureDescription  && manicureDescription"></table>-->
+<!--    </div>-->
 </div>
 </body>
 </html>
