--- a/src/main/resources/templates/user/add.html
+++ b/src/main/resources/templates/user/add.html
@@ -6,31 +6,39 @@
     <title>Sign Up</title>
 </head>
 <body>
+<div>
     <form method = 'post' th:action="@{/user}">
         <label>
             Username:
-            <input type = 'text' name = 'username' th:value="${username}">
+            <input th:field="${user.username}">
+<!--            <input type = 'text' name = 'username' th:value="${username}">-->
         </label>
+            <p class="error" th:errors="${user.username}"></p>
 
         <label>
             Email:
-            <input type = 'email' name = 'email' th:value="${email}">
+            <input th:field="${user.email}">
+<!--            <input type = 'email' name = 'email' th:value="${email}">-->
         </label>
 
         <label>
             Password:
-            <input type = 'password' name = 'password'>
+<!--            <input type = 'password' th:field="${user.password}" name = 'password'>-->
+            <input type="password" th:field="${user.password}">
+            <p class="error" th:errors="${user.password}"></p>
         </label>
 
         <label>
             Verify Password:
-            <input type = 'password' name = 'verify'>
+            <input type="password" th:field="${user.verifyPassword}">
+            <p class="error" th:errors="${user.verifyPassword}"></p>
+<!--            <input type = 'password' name = 'verify'>-->
+
         </label>
-
-        <p th:text="${error}"></p>
-
+<!--        <p th:text="${error}"></p>-->
         <input type = 'submit' value = 'Sign Up'>
     </form>
+</div>
 
 </body>
 </html>
